--- a/SprintTek/angular/package.json
+++ b/SprintTek/angular/package.json
@@ -15,23 +15,23 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^14.0.2",
-    "@angular/cdk": "^14.0.2",
-    "@angular/common": "^14.0.2",
+    "@angular/animations": "^8.2.5",
+    "@angular/cdk": "^8.1.4",
+    "@angular/common": "^8.2.5",
     "@angular/compiler": "^8.2.5",
-    "@angular/core": "^14.0.2",
-    "@angular/forms": "^14.0.2",
-    "@angular/platform-browser": "^14.0.2",
-    "@angular/platform-browser-dynamic": "^14.0.2",
-    "@angular/platform-server": "^14.0.2",
-    "@angular/router": "^14.0.2",
+    "@angular/core": "^8.2.5",
+    "@angular/forms": "^8.2.5",
+    "@angular/platform-browser": "^8.2.5",
+    "@angular/platform-browser-dynamic": "^8.2.5",
+    "@angular/platform-server": "^8.2.5",
+    "@angular/router": "^8.2.5",
     "@aspnet/signalr": "^1.1.4",
-    "@swimlane/ngx-charts": "^20.1.0",
-    "abp-ng2-module": "^7.1.0",
+    "@swimlane/ngx-charts": "^12.0.1",
+    "abp-ng2-module": "^5.1.0",
     "abp-web-resources": "^4.2.0",
     "adal-angular": "^1.0.17",
-    "angular-gridster2": "^14.0.1",
-    "angular-oauth2-oidc": "^13.0.1",
+    "angular-gridster2": "^8.2.0",
+    "angular-oauth2-oidc": "^8.0.4",
     "angular2-counto": "^1.2.5",
     "angular2-text-mask": "^9.0.0",
     "animate.css": "^3.7.2",
@@ -44,12 +44,12 @@
     "lodash": "^4.17.13",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
-    "ng-recaptcha": "^9.0.0",
+    "ng-recaptcha": "^5.0.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.2.0",
     "ngx-image-cropper": "^1.5.1",
     "ngx-perfect-scrollbar": "^8.0.0",
-    "ngx-spinner": "^13.1.1",
+    "ngx-spinner": "^8.0.3",
     "object-path": "^0.11.4",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.3",
@@ -64,9 +64,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.2",
-    "@angular/cli": "^14.0.2",
-    "@angular/compiler-cli": "^14.0.2",
+    "@angular-devkit/build-angular": "~0.803.3",
+    "@angular/cli": "^8.3.3",
+    "@angular/compiler-cli": "^8.2.5",
     "@angularclass/hmr": "^2.1.3",
     "@angularclass/hmr-loader": "^3.0.4",
     "@types/jasmine": "~3.4.0",
@@ -74,8 +74,8 @@
     "@types/lodash": "^4.14.144",
     "@types/moment-timezone": "^0.5.12",
     "@types/node": "^12.11.6",
-    "codelyzer": "^0.0.28",
-    "gulp": "^3.9.1",
+    "codelyzer": "^5.2.0",
+    "gulp": "^4.0.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-less": "^4.0.1",
@@ -83,7 +83,7 @@
     "gulp-uglify": "^3.0.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^6.4.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
@@ -91,7 +91,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "merge-stream": "^2.0.0",
     "nswag": "13.0.6",
-    "postcss-url": "^10.1.3",
+    "postcss-url": "^9.0.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslib": "1.10.0",
